--- a/kustomize/base/grafana/instance/grafana-readonly.yaml
+++ b/kustomize/base/grafana/instance/grafana-readonly.yaml
@@ -16,24 +16,24 @@ spec:
       enabled: True
   containers:
     - args:
-        - '-provider=openshift'
-        - '-pass-basic-auth=false'
-        - '-https-address=:9091'
-        - '-http-address='
-        - '-email-domain=*'
-        - '-upstream=http://localhost:3000'
+        - "-provider=openshift"
+        - "-pass-basic-auth=false"
+        - "-https-address=:9091"
+        - "-http-address="
+        - "-email-domain=*"
+        - "-upstream=http://localhost:3000"
         # - '-openshift-sar={"resource": "namespaces", "verb": "get","namespace":"example"}'
         # - '-openshift-delegate-urls={"/": {"resource": "namespaces", "verb": "get", "namespace":"example"}}'
-        - '-tls-cert=/etc/tls/private/tls.crt'
-        - '-tls-key=/etc/tls/private/tls.key'
-        - '-client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token'
-        - '-cookie-secret-file=/etc/proxy/secrets/session_secret'
-        - '-openshift-service-account=grafana-serviceaccount'
-        - '-openshift-ca=/etc/pki/tls/cert.pem'
-        - '-openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt'
-        - '-openshift-ca=/etc/grafana-configmaps/ocp-injected-certs/ca-bundle.crt'
-        - '-skip-auth-regex=^/metrics'
-      image: 'quay.io/openshift/origin-oauth-proxy:4.9'
+        - "-tls-cert=/etc/tls/private/tls.crt"
+        - "-tls-key=/etc/tls/private/tls.key"
+        - "-client-secret-file=/var/run/secrets/kubernetes.io/serviceaccount/token"
+        - "-cookie-secret-file=/etc/proxy/secrets/session_secret"
+        - "-openshift-service-account=grafana-serviceaccount"
+        - "-openshift-ca=/etc/pki/tls/cert.pem"
+        - "-openshift-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
+        - "-openshift-ca=/etc/grafana-configmaps/ocp-injected-certs/ca-bundle.crt"
+        - "-skip-auth-regex=^/metrics"
+      image: "quay.io/openshift/origin-oauth-proxy:4.9"
       name: grafana-proxy
       ports:
         - containerPort: 9091
@@ -61,14 +61,14 @@ spec:
       service.alpha.openshift.io/serving-cert-secret-name: grafana-k8s-tls
   resources:
     limits:
-      cpu: '1'
+      cpu: "1"
       memory: 256Mi
     requests:
       cpu: 100m
       memory: 128Mi
   initResources:
     limits:
-      cpu: '1'
+      cpu: "1"
       memory: 256Mi
     requests:
       cpu: 100m
@@ -84,4 +84,4 @@ spec:
       serviceaccounts.openshift.io/oauth-redirectreference.primary: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"grafana-route"}}'
   dashboardLabelSelector:
     - matchExpressions:
-        - { key: "monitoring-key", operator: In, values: ['middleware'] }
+        - { key: "monitoring-key", operator: In, values: ["middleware"] }
