--- a/kustomize/base/team/access.yaml
+++ b/kustomize/base/team/access.yaml
@@ -7,8 +7,8 @@ roleRef:
   kind: ClusterRole
   name: admin
 subjects:
-- kind: User
-  name: user1
+  - kind: User
+    name: user1
 ---
 # This role is needed to create ServiceMonitor. Alternatively if Prometheus operator was installed via OperatorHub on the cluster anywhere, it's part of the default view/edit/admin ClusterRoles already.
 apiVersion: rbac.authorization.k8s.io/v1
@@ -20,5 +20,18 @@ roleRef:
   kind: ClusterRole
   name: monitoring-edit
 subjects:
-- kind: User
-  name: user1
+  - kind: User
+    name: user1
+---
+# Thise role is needed to create Alert Manager Rules
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: alert-routing-edit
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: alert-routing-edit
+subjects:
+  - kind: User
+    name: user1
