--- a/kustomize/base/team/namespace.yaml
+++ b/kustomize/base/team/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: team-b
+  name: team-x
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
