--- a/kustomize/overlay/openshift-monitoring/user-workload-monitoring-config.yaml
+++ b/kustomize/overlay/openshift-monitoring/user-workload-monitoring-config.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: openshift-user-workload-monitoring
 data:
   config.yaml: |
+    alertmanager:
+      enabled: "true"
+      enableAlertmanagerConfig: "true"
     prometheus: 
       retention: 1h 
       resources:
