add cronjob for manageing bound token refresh

--- a/kustomize/base/grafana/instance/kustomization.yaml
+++ b/kustomize/base/grafana/instance/kustomization.yaml
@@ -7,3 +7,9 @@ resources:
   # - grafana-readonly.yaml
   - grafana-admin.yaml
   - grafana-datasource.yaml
+  - datasorce-setup-job.yaml
+
+configMapGenerator:
+  - name: datasource-setup-script
+    files:
+      - script.sh
