--- a/kustomize/overlay/grafana-monitoring/kustomization.yaml
+++ b/kustomize/overlay/grafana-monitoring/kustomization.yaml
@@ -13,7 +13,7 @@ patches:
       name: team-x
     patch: |-
       - op: replace
-        path: /spec/metadata/name
+        path: /metadata/name
         value: grafana-monitoring
   - target:
       kind: OperatorGroup
