--- a/kustomize/overlay/openshift-monitoring/user-workload-monitoring-config.yaml
+++ b/kustomize/overlay/openshift-monitoring/user-workload-monitoring-config.yaml
@@ -36,3 +36,6 @@ data:
       #     resources:
       #       requests:
       #         storage: 3Gi
+    alertmanager:
+      enabled: true 
+      enableAlertmanagerConfig: true
