--- a/kustomize/base/grafana/instance/datasource-setup-job.yaml
+++ b/kustomize/base/grafana/instance/datasource-setup-job.yaml
@@ -20,7 +20,7 @@ spec:
           restartPolicy: Never
           containers:
             - name: datasource-setup-script
-              image: ubi8:latest
+              image: image-registry.openshift-image-registry.svc:5000/openshift/cli
               args:
                 - /script/script.sh
               resources:
